kubernetes/backend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
 name: backend-deployment
 namespace: app
spec:
 replicas: 1
 selector:
  matchLabels:
   app: backend-app
 template:
  metadata:
   name: backend-pod
   labels:
    app: backend-app
  spec:
   containers:
   - name: backend-container
     image: vinayak100ni/chat-app-k8s-backend
     ports:
     - containerPort: 5001
