kubernetes/frontend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
 name: frontend-deployment
 namespace: app
spec:
 replicas: 1
 selector:
  matchLabels:
   app: frontend-app
 template:
  metadata:
   name: frontend-pod
   labels:
    app: frontend-app
  spec:
   containers:
   - name: frontend-container
     image: vinayak100ni/chat-app-k8s-frontend:latest
     ports:
     - containerPort: 80
