kubernetes/mongodb-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
 name: mongodb-deployment
 namespace: app
spec:
 replicas: 1
 selector:
  matchLabels:
   app: mongodb-app
 template:
  metadata:
   name: mongodb-pod
   labels:
    app: mongodb-app
  spec:
   containers:
   - name: mongodb-container
     image: mongo:latest
     ports:
     - containerPort: 27017
   volumes:
   - name: mongo-data
     persistentVolumeClaim:
      claimName: pvc-mongo
