kubernetes/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
 name: backend
 namespace: app
spec:
 selector:
  app: backend-app
 ports:
 - port: 5001
   targetPort: 5001
