kubernetes/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
 name: frontend-service
 namespace: app
spec:
 selector:
  app: frontend-app
 ports:
 - port: 80
   targetPort: 80
