kubernetes/mongodb-service.yaml
kind: Service
apiVersion: v1
metadata: 
 name: mongodb
 namespace: app
spec:
 selector:
  app: mongodb-app
 ports:
 - port: 27017
   targetPort: 27017
